[package]
name = "boehm_allocator"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"

[features]
# Enable this feature to turn on additional GC optimizations that are only
# possible with the rustc_boehm fork of the compiler.
rustc_boehm = ["core", "compiler_builtins"]

# Enable various GC based statistics. Stats are disabled by default as they have
# a run-time cost and are expected to only be used for profiling purposes.
gc_stats = []


[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.10", optional = true, features = ['rustc-dep-of-std'] }

