[package]
name = "libgc_internal"
version = "0.1.0"
authors = ["Jacob Hughes <jh@jakehughes.uk>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
test = false
bench = false
doc = false

[features]
# Enable this feature to turn on additional GC optimizations that are only
# possible with the rustgc fork of the compiler.
rustgc = ["core", "compiler_builtins"]

# Enable various GC based statistics. Stats are disabled by default as they have
# a run-time cost and are expected to only be used for profiling purposes.
gc_stats = []


[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.10", optional = true, features = ['rustc-dep-of-std'] }

